# WorldSim

./: Cargo.toml  README.md
src/: main.rs
src/modules/: mod.rs  state.rs
src/modules/game/: chamber.rs  community.rs  division.rs  enumerated_power.rs  gov_ext.rs  government.rs  mod.rs  power.rs  power_behavior.rs  role.rs  world.rs
