[package]
name = "Tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-std = { version = "1.12.0", features = ["attributes"] }
geo = "0.27.0"
geo-types = "0.7.12"
geozero = "0.11.0"
rand = "0.8.5"
rstar = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
mime = "0.3.17"
